# ece484-sp25

./: LICENSE  README.md  f1tenth_map.rviz  frames.gv  lane_vicon_vision.py  lane_vision.py  lidar.py  setup.sh  setup_ros.sh  vicon_bridge.py  vision.py  wall_follow.py
devel/: .catkin  setup.sh
devel/lib/exploration_server/: exploration_server_node  plugin_client
devel/lib/explore_lite/: explore
devel/lib/f1tenth_mapper/: f1tenth_mapper.py
devel/lib/f1tenth_slam/: vesc_odom_tf_broadcaster.py
devel/lib/hector_compressed_map_transport/: map_to_image_node
devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
devel/lib/hector_map_server/: hector_map_server
devel/lib/hector_trajectory_server/: hector_trajectory_server
devel/lib/joy/: joy_node
devel/lib/multirobot_map_merge/: map_merge
devel/lib/pkgconfig/: ackermann_cmd_mux.pc  ackermann_msgs.pc  exploration_msgs.pc  exploration_server.pc  explore_lite.pc  f1tenth-sim.pc  f1tenth_mapper.pc  f1tenth_navigation.pc  f1tenth_slam.pc  finalproj.pc  frontier_exploration.pc  hector_compressed_map_transport.pc  hector_geotiff.pc  hector_geotiff_launch.pc  hector_geotiff_plugins.pc  hector_imu_attitude_to_tf.pc  hector_imu_tools.pc  hector_map_server.pc  hector_map_tools.pc  hector_mapping.pc  hector_marker_drawing.pc  hector_nav_msgs.pc  hector_slam_launch.pc  hector_trajectory_server.pc  joy.pc  multirobot_map_merge.pc  polygon_layer.pc  racecar.pc  racecar_worlds.pc  serial.pc  tf_bridge.pc  vesc_ackermann.pc  vesc_driver.pc  vesc_msgs.pc  vicon_control.pc  vision_control.pc  wall_follower.pc  waypoint_logger.pc
devel/lib/serial/: serial_example
devel/lib/vesc_ackermann/: ackermann_to_vesc_node  vesc_to_odom_node
devel/lib/vesc_driver/: vesc_driver_node
highway_brake/: mp0_p1.py  vehicle_controller.py  vehicle_pedestrian_scenario.py
mp0/: README.md
mp0/highway_brake/: vehicle_pedestrian_scenario.py
mp0/traffic_signal/: mp0_p2.py  traffic_signal_scenario.py  vehicle_controller.py
mp1/: README.md  eval.py  test_lane_detection.py  train.py
shortest_path/: a_star.py  state.py
src/f1tenth-sim/launch/: frontier_explorer.launch  mapping.launch
src/f1tenth-sim/scripts/: astar_planner.py  frontier_explorer.py  keyboard_teleop.py
src/f1tenth_control/vision_control/: CMakeLists.txt  package.xml
src/f1tenth_control/vision_control/vision_PID_B/: controller.py  errorgen.py  vision_lanefollower_pid.py
src/f1tenth_mapper/: CMakeLists.txt
src/f1tenth_mapper/launch/: f1tenth_mapper.launch
src/f1tenth_mapper/scripts/: f1tenth_mapper.py  f1tenth_mapper2.py  map_my_ass.py  map_with_hector.py
src/f1tenth_navigation/: CMakeLists.txt  package.xml
src/f1tenth_navigation/config/: costmap_common_params.yaml  dwa_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/f1tenth_navigation/launch/: exploration.launch
src/f1tenth_slam/: CMakeLists.txt  package.xml
src/f1tenth_slam/config/: mapper_params_online_async.yaml
src/f1tenth_slam/launch/: online_async_real.launch  online_sync_real.launch
src/mp0/highway_brake/: vehicle_controller.py
src/mp0/traffic_signal/: vehicle_controller.py
src/mp1/: eval.py  point_finder.py  train.py
src/tf_bridge/: CMakeLists.txt
src/vision/: CMakeLists.txt
src/wall_follower/: package.xml
src/yolo_fruit_detector/: CMakeLists.txt  package.xml
traffic_signal/: mp0_p2.py
(+71 files in other folders)
