<package format="2">
  <name>f1tenth_navigation</name>
  <version>0.0.1</version>
  <description>Navigation setup for F1TENTH</description>

  <maintainer email="you@domain.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>move_base</depend>
</package>
