<?xml version="1.0"?>
<package format="2">
  <name>f1tenth_slam</name>
  <version>0.0.1</version>
  <description>
    ROS package to run slam_toolbox for online mapping on the F1TENTH car.
  </description>

  <maintainer email="your.email@illinois.edu">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>slam_toolbox</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- std_msgs is pulled in transitively by rospy, but you can add it if you reference any std_msgs types -->
  <depend>std_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

